# GPT-Jobhunter

./: .dockerignore  .env-template  .env.example  .gitattributes  .gitignore  .~c9_invoke_ubks0u.py  CLAUDE.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  INSTALLATION.md  LICENSE.md  Makefile  README.md  app.py  aws_secrets_manager.py  aws_start_stepfunc.py  dag_jobhunter.py  deduplicate_raw_listings.sql  dm.py  docker-compose.yml  extract_text_from_site.py  get_jobs_linkedin.py  linkedin-bot.py  load_raw_into_bq.py  main.py  openapi.json  poc_linkedin.py  pyproject.toml  pytest.ini  rebuild_all.sh  requirements.txt  resume.txt  run_docker.sh  run_linkedin_bot.sh  run_linkedinbot.sh  run_poc.sh  search_jobs.py  setup.py  text_analysis.py  (+1 more)
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.streamlit/: secrets.toml
app/: app.py  config.py  main.py
dags/: linkedin_bot_jobhunter_pipeline.py
data/: data_access.py  job_search.db  jobhunter.db
database/: jobhunter.db
database_reports/: get_latest_jobs.py
docs/: conf.py  index.rst  jobhunter.rst  modules.rst
helpers/: emailer.py  extract_text_from_site.py  search_jobs.py  text_similarity.py
jobhunter/: .env.sample  AuthHandler.py  FileHandler.py  FileHandler_test.py  SQLiteHandler.py  __main__.py  all_jobs.db  clear  cli.py  config.py  config.yaml  dataTransformer.py  delete_local.py  embedding_test.py  extract.py  linkedin-bot.py  linkedin_bot.py  linkedin_jobs_extract.py  linkedin_jobs_load.py  linkedin_jobs_reports.py  load.py  main.py  pyvenv.cfg  rebuild_embeddings.py  reports.py  run_linkedin-bot.py  run_linkedin_bot.py  run_linkedinbot.sh  search_jobs.py  search_linkedin_jobs.py  search_linkedin_jobs_test.py  textAnalysis.py  text_similarity.py  transform.py
jobhunter-venv/: pyvenv.cfg
logic/: gpt.py  process_data.py
resumes/: resume.txt
scripts/: generate_openapi.py
src/: delete_local.py  extract.py  extract_salary_test.py  (+6 more)
(+12533 files in other folders)
